--- a/flight-delay-prediction.ipynb
+++ b/flight-delay-prediction.ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -164,6 +164,14 @@
     "scrolled": true
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ligerd/mypythno/local/lib/python2.7/site-packages/IPython/core/interactiveshell.py:2714: DtypeWarning: Columns (7,8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -220,7 +228,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>2015</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -254,7 +262,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>2015</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -288,7 +296,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>2015</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -322,7 +330,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>2015</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -356,7 +364,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>2015</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -437,7 +445,7 @@
        "4             NaN            NaN                  NaN            NaN  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1255,6 +1263,13 @@
    ],
    "source": [
     "flights.loc[:,'AIRLINE':'WEATHER_DELAY'].describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Widoczny jest problem z atrybutami, które reprezentują czas. Dlatego na tym etapie nie będziemy się przyjmować tymi atrybutami. Skupimy się na atrybucie AIRLINE_DELAY, który w swojej pracy będziemy próbowali predykować. Tabela pokazuje że średnia wartość opóźnienia jest równa 19. Odchylenie standardowe dla atrybutu AIRLINE_DELAY wynosi 47 ta wartość pokazuje, że wartości opóźnienia dosyć mocno rozrzucone wokół średniej. Również widać ile wynosi maksymalne opóźnienie lotu 19 godzin."
    ]
   },
   {
